RESOLVED FIXED105933
REGRESSION (r138464): Safari hangs when opening Privacy preferences
https://bugs.webkit.org/show_bug.cgi?id=105933
Summary REGRESSION (r138464): Safari hangs when opening Privacy preferences
Alexey Proskuryakov
Reported 2013-01-02 11:53:40 PST
Dispatching on main queue just hangs if we are already on main thread.
Attachments
proposed fix (1.62 KB, patch)
2013-01-02 11:58 PST, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2013-01-02 11:58:05 PST
Created attachment 181042 [details] proposed fix
WebKit Review Bot
Comment 2 2013-01-02 12:40:41 PST
Comment on attachment 181042 [details] proposed fix Clearing flags on attachment: 181042 Committed r138635: <http://trac.webkit.org/changeset/138635>
WebKit Review Bot
Comment 3 2013-01-02 12:40:44 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.