REGRESSION (r138464): Safari hangs when opening Privacy preferences https://bugs.webkit.org/show_bug.cgi?id=105933

Reviewed by Sam Weinig.

Quick and dirty fix - added a special case for main thread. But I'm not sure if
dispatch_sync on main queue is really the best idiom here.

* Shared/Plugins/Netscape/mac/NetscapePluginModuleMac.mm:
(WebKit::getPluginInfoFromCarbonResources):


Canonical link: https://commits.webkit.org/124119@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138635 268f45cc-cd09-0410-ab3c-d52691b4dbfc